# apple-to-last-fm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml  justfile
.claude/: settings.local.json
.github/workflows/: release.yml
patches/wrapped-vec/: Cargo.toml
patches/wrapped-vec/src/: lib.rs
src/: auth.rs  config.rs  credentials.rs  daemon.rs  error.rs  main.rs  player.rs  scrobbler.rs  state.rs
