[package]
name = "apple-to-last-fm"
version = "1.0.0"
edition = "2024"
description = "Scrobble Apple Music plays to Last.fm"
license = "MIT"
homepage = "https://github.com/jeremywrnr/apple-to-last-fm"
repository = "https://github.com/jeremywrnr/apple-to-last-fm"

[dependencies]
apple-music = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-oslog = "0.3"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
md-5 = "0.10"
rpassword = "7"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
