[package]
name = "wrapped-vec"
version = "0.3.0"
authors = ["David Futcher <david@futcher.io>"]
edition = "2018"
description = "Macro for generating wrapped Vec types and associated boilerplate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bobbo/wrapped-vec"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = "^1"
